# async_trait_experiments

./: Cargo.toml  readme.md
benches/: adder.rs  bench.rs  stream.rs
src/: boxed_future.rs  dynamic_future.rs  lib.rs  recycler.rs
