[package]
name = "async_trait_experiments"
version = "0.1.0"
authors = ["Matthias Einwag <matthias.einwag@live.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Experiments around async traits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "async_trait_experiments"

[dependencies]

[dev-dependencies]
criterion = "0.3.3"
async-trait = "0.1.4"
futures = "0.3.5"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemallocator = "0.3.2"

[[bench]]
name = "bench"
harness = false
